Create endpoint to get app data
Added .env and .gitignore to ignore it
Updated app_data.json to remove newlines for ease of python reading file
Added function to read app_data.json
Added endpoint to get data

--- a/data/app_data.json
+++ b/data/app_data.json
@@ -1,17 +1,1 @@
-{
-    "Routines" : [ 
-        { 
-            "Name" : "Good Morning",
-            "Steps" : [
-                { 
-                    "Name" : "Brush Teeth",
-                    "Completed": false
-                },
-                { 
-                    "Name" : "Get Dressed",
-                    "Completed" : false
-                }
-            ]
-        } 
-    ]
-}
+{"Routines" : [ { "Name" : "Good Morning", "Steps" : [ { "Name" : "Brush Teeth", "Completed": false},{"Name" : "Get Dressed", "Completed" : false}]}]}
